--- a/authentication-app/client/src/App.css
+++ b/authentication-app/client/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+.row-content {
+	width: 50rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dropdown-btn {
+	border: none;
+	background: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.system-font-stack {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu,
+    Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.social-button {
+	background: none;
+	border: none
 }
-
-.App-link {
-  color: #61dafb;
+.title {
+	font-size: 180%;
+	font-weight: 400;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading {
+	font-size: 140%;
+}
+.sub-heading {
+	font-size: 90%;
+	color: #707B7C;
+	font-weight: 500;
+}
+.row-key {
+	font-size: 80%;
+	color: #AAB7B8;
+}
+.row-value {
+	font-size: 100%;
+	font-weight: 500;
+}
+.imageLabel {
+	position: relative;
+	width: 4rem;
+	height: 4rem;
+	cursor: pointer;
+}
+.imageDisplay {
+	position: absolute;
+}
+.cameraIcon {
+	position: absolute;
+	left: 1.5rem;
+	top: 1.25rem;
+	color: white;
+	opacity: 0;
+}
+.cameraIcon:hover {
+	opacity: 1;
+}
+.changePhoto {
+	font-size: 80%;
+	color: #707B7C;
+	font-weight: 500;
+}
+.labelKey {
+	font-size: 80%;
+	font-weight: 500;
+}
+.labelValue {
+	border: 0.125rem solid #AAB7B8;
+	padding: 0.5rem 1rem;
+	font-size: 90%;
+}
+.labelValue::placeholder {
+	font-size: 80%;
+}
+*:focus {
+ outline: 0 !important;
 }
