--- a/authentication-app/client/src/App.css
+++ b/authentication-app/client/src/App.css
@@ -1,13 +1,39 @@
 .row-content {
 	width: 50rem;
 }
+@media (min-width: 768px) {
+	.main-box {
+		border: 1px solid #BDBDBD;
+		box-sizing: border-box;
+		border-radius: 1.5rem;
+	}
+}
+@media (max-width: 768px) {
+	.displayName {
+		display: none;
+	}
+}
+.input-box {
+	border: 1px solid #BDBDBD;
+	box-sizing: border-box;
+	border-radius: 0.5rem;
+}
+.button-box {
+	background: #2F80ED;
+	border-radius: 8px;
+}
+.dark-grp {
+	color: #000000
+}
+.dropdown-box {
+	border: 1px solid #E0E0E0;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+	border-radius: 0.75rem;
+}
 .dropdown-btn {
 	border: none;
 	background: none;
-}
-.system-font-stack {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu,
-    Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .social-button {
 	background: none;
@@ -62,9 +88,9 @@
 	font-weight: 500;
 }
 .labelValue {
-	border: 0.125rem solid #AAB7B8;
-	padding: 0.5rem 1rem;
-	font-size: 90%;
+	border: 1px solid #828282;
+	box-sizing: border-box;
+	border-radius: 0.5rem;
 }
 .labelValue::placeholder {
 	font-size: 80%;
